{
    "name": "playerInputs",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "d9f40e6d-3543-4d29-9bea-c85710226dbb",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "10686ee7-5376-4064-9e4c-2556a79be9c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "a3b97ced-4133-431b-9b68-0e747b02e48d",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a622dc0b-2051-4b2c-a9d9-e8f29ddc443f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b44cdf6b-4ad0-4e4f-b13d-4fd493e2933e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3a43ae43-295c-47d6-acec-59a419624b27",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1f6723b1-315b-485f-81d1-018fc59b0cc6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "9e13546c-63c2-4b41-840a-ef53f4a73487",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "b02350e6-795b-4408-bdbc-bdcde7570450",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "TowerPlacement",
            "id": "606c4484-b4e9-4b39-a952-7f7ddf438a71",
            "actions": [
                {
                    "name": "StartPlacement",
                    "type": "Button",
                    "id": "7df14286-1bf1-44d1-81d5-014db4331021",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelPlacement",
                    "type": "Button",
                    "id": "d8881e29-ac53-497b-9137-0cb6f2e95f62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceTower",
                    "type": "Button",
                    "id": "ee689fd0-080b-46cb-9266-2992ce1fb784",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9fb3f94e-b3f5-4d8b-90ca-ec006b49ad57",
                    "path": "<Keyboard>/#(1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartPlacement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b19cdc51-52b4-4012-9de1-b597b8515c08",
                    "path": "<Keyboard>/#(C)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelPlacement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d7f5dd3-960a-4d69-b9cf-857fc75f6b9b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}